--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "protol",
+  "name": "micro-portal",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,13 +7,19 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "scriptjs": "^2.5.9",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.134",
+    "@types/node-sass": "^4.11.0",
+    "@types/scriptjs": "^0.0.2",
     "@vue/cli-plugin-typescript": "^3.8.0",
     "@vue/cli-service": "^3.8.0",
+    "lodash": "^4.17.11",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
     "typescript": "^3.4.3",
